updated readme and tons

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono|Roboto+Slab|Roboto:300,400,500,700" />
   <meta name="theme-color" content="#000000" />
 
-  <title>Pinball Video Search</title>
+  <title>Video Search</title>
 </head>
 
 <body>
